# BiteGrADS

./: .gitignore  README.md  setup.cfg
docs/: conf.py  index.rst
docs/Examples/: 01_gridded_binary_without_pdef.md  02_gridded_binary_with_pdef.md  03_change_the_projection.md  04_check_the_crs.md  index.rst
src/bite_grads/: __init__.py  ctl.py  grads.py  tools.py
