[metadata]
name = bite_grads
version = attr: bite_grads.__version__
description = For reading GrADS format data.
author = modabao
author_email = mo_dabao@qq.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mo-Dabao/BiteGrADS
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
package_dir =
    = src
packages = find:
install_requires = xarray; dask; pyproj; numpy; pandas
python_requires = >=3.5

[options.packages.find]
where = src
